feat: modify side bar content

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -37,10 +37,11 @@
 <div>
     <h2>About Me:</h2>
     <p>
-        Hi! I'm Guilherme Soares, with a Master's degree in Computer Science and
-        Engineering from Instituto Superior Técnico, Portugal. I'm passionate
-        about [mention areas of interest or expertise], and I enjoy working on
-        [mention projects or fields you're involved in].
+        Hi! I'm Guilherme Soares, and I hold a Master's degree in Computer
+        Science and Engineering from Instituto Superior Técnico, Portugal. I'm
+        passionate about coding, cybersecurity, and self-hosting, among other
+        things. In my free time, I enjoy activities such as going to the gym,
+        climbing, and gaming.
     </p>
     <h2>Get In Touch:</h2>
 
