--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -273,6 +273,10 @@ $side-bar-size: 300px;
     }
 }
 
+.my-home-profile-img {
+    max-width: Min(400px, 100%);
+}
+
 .my-name {
     font-family: "Roboto Condensed", sans-serif;
     padding: 1rem;
