--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,15 +1,17 @@
 {{ define "main" }}
     <div class="container p-3">
         <div class="my-home">
-            <div class="align-self-center" style="flex-basis:33%">
-                <img
-                    src="/profile.jpg"
-                    class="img-fluid img-thumbnail d-block my-auto"
-                    alt="Profile Picture"
-                />
-            </div>
-            <div class="p-3" style="flex-basis:66%">
-                {{ .Content }}
+            <div class="row">
+                <div class="align-self-center col-12 col-lg-4">
+                    <img
+                        src="/profile.jpg"
+                        class="img-fluid img-thumbnail my-home-profile-img d-block mx-auto"
+                        alt="Profile Picture"
+                    />
+                </div>
+                <div class="p-3 col-12 col-lg-8">
+                    {{ .Content }}
+                </div>
             </div>
         </div>
     </div>
