--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,6 +1,6 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width" />
-<link rel="icon" href="/code-solid.svg" type="image/icon type" />
+<link rel="icon" href="/code-solid.svg" type="image/svg+xml" />
 <title>
     {{ if .Title }}
         {{ .Title }} |
