--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -53,7 +53,8 @@
         class="my-email d-flex align-items-center justify-content-center"
         href="mailto:guilherme.luis.soares2001@gmail.com"
     >
-        <i class="p-1 fas fa-envelope"></i> guilherme.luis.soares2001@gmail.com
+        <i class="p-1 fas fa-envelope"></i>
+        guilherme.luis.soares2001@gmail.com
     </a>
     <br />
 
