--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -99,10 +99,11 @@ body {
     &.preload {
         visibility: hidden;
         * {
-            -webkit-transition: none !important;
-            -moz-transition: none !important;
-            -ms-transition: none !important;
-            -o-transition: none !important;
+            transition: none !important;
+        }
+    }
+    &.noanimation {
+        * {
             transition: none !important;
         }
     }
@@ -113,7 +114,8 @@ body {
 $font-header-size: 1.5rem;
 // TODO: examine better this height relative to root font size
 $header-size: $font-header-size * 2.5;
-$side-bar-size: 300px;
+$toggler-size: 50px;
+$sidebar-size: 300px + $toggler-size;
 
 .my-header {
     background-color: $my-black;
@@ -135,7 +137,7 @@ $side-bar-size: 300px;
     @include make-col-ready();
     @include make-col(2);
 
-    min-width: $side-bar-size;
+    min-width: $sidebar-size;
     // font-size: clamp(1rem, 1.5vw, $font-header-size);
 
     .my-port {
@@ -220,15 +222,17 @@ $side-bar-size: 300px;
 
 // Define mixin for placing elements after header
 @mixin after-header() {
-    // top: $header-size;
     height: subtract(100vh, $header-size);
+    // @include media-breakpoint-down(lg) {
+    //     height: subtract(100vh, add($header-size, $toggler-size));
+    // }
 }
 
 .my-email {
     font-size: clamp(0.8rem, 0.75vw, 1rem);
 }
 
-.my-side-bar {
+.my-sidebar {
     @include make-col-ready();
     @include after-header();
 
@@ -249,20 +253,69 @@ $side-bar-size: 300px;
     transition-duration: 0.3s;
     transition-timing-function: linear;
     &.show {
-        @include make-col(2);
-        padding: 1.25rem;
         opacity: 1;
+        padding: 1.25rem;
+    }
+    @include media-breakpoint-up(lg) {
+        &.show {
+            @include make-col(2);
+            padding-right: Max(1.25rem, $toggler-size);
+            // padding: 1.25rem;
+            // opacity: 1;
 
-        // NOTE: do math (use the `max` css function)
-        // instead of min-width to correctly animate from 0 to width
-        width: Max($side-bar-size, 16.66666667%);
+            // NOTE: do math (use the `max` css function)
+            // instead of min-width to correctly animate from 0 to width
+            width: Max($sidebar-size, 16.66666667%);
+        }
+    }
+    @include media-breakpoint-down(lg) {
+        @include make-col(12);
+        max-height: 0;
+        &.show {
+            // NOTE: Using max-height so it animates from 0 to 1000px. The value 1000 was
+            // chosen empirically.
+            max-height: 1000px;
+        }
+    }
+}
 
-        // On devices lower than lg, take full width
-        @include media-breakpoint-down(lg) {
-            @include make-col(12);
-            height: auto;
-            // overflow-y: visible;
-            flex-grow: 1;
+#sidebar-toggler {
+    position: fixed;
+    top: add($header-size, 20px);
+    left: 2px; // account for main-layout left border
+    width: $toggler-size;
+
+    transition-property: all;
+    transition-duration: 0.3s;
+    transition-timing-function: linear;
+
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+
+    @include media-breakpoint-up(lg) {
+        &::before {
+            content: "\f061"; // Unicode for the right arrow icon
+            font-family: "Font Awesome 5 Free"; // Ensure the correct Font Awesome font
+            font-weight: 900; // Necessary for Font Awesome icons
+        }
+        &.show {
+            left: Max($sidebar-size, 16.66666667%);
+            transform: translateX(-100%) scaleX(-1);
+        }
+    }
+
+    @include media-breakpoint-down(lg) {
+        position: sticky;
+        z-index: 1015;
+        height: $toggler-size;
+        top: $header-size;
+        border-radius: 0;
+        width: 100%;
+        &::before {
+            content: "Show Info";
+        }
+        &.show::before {
+            content: "Hide Info";
         }
     }
 }
@@ -295,9 +348,12 @@ $side-bar-size: 300px;
     align-items: flex-start;
     // height: 100%;
     overflow-y: auto;
+    padding: 1.25rem;
+    padding-left: Max(1.25rem, $toggler-size);
+    padding-top: 0;
 
     @include media-breakpoint-down(lg) {
-        height: auto;
+        // height: auto;
         @include make-col(12);
         overflow-y: visible;
     }
@@ -315,7 +371,7 @@ $side-bar-size: 300px;
     z-index: 1010;
 
     @include media-breakpoint-down(lg) {
-        top: $header-size;
+        top: add($header-size, $toggler-size);
     }
 }
 
@@ -367,5 +423,4 @@ $side-bar-size: 300px;
 }
 
 .my-block {
-
 }
